--- a/HyeJeong/hipet/src/main/resources/application.properties
+++ b/HyeJeong/hipet/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=hipet
+
+spring.datasource.url = jdbc:mysql://localhost:3306/hipet
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
