--- a/HyeJeong/hipet/src/main/resources/application.properties
+++ b/HyeJeong/hipet/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=hipet
 
-spring.datasource.url = jdbc:mysql://hipet-db.cjs2cy0m6zxd.ap-northeast-2.rds.amazonaws.com:3306/hipet
-spring.datasource.username=admin
-spring.datasource.password=hipet0517
+spring.datasource.url = jdbc:mysql://localhost:3306/likelion
+spring.datasource.username=root
+spring.datasource.password=1234
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
