--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+# Ignore the application.properties file in the src/main/resources directory
+src/main/resources/application.properties
