:sparkles: FEAT : 쪽지 전송 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ spring.datasource.username=admin
 spring.datasource.password=hipet0517
 
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=create
 cloud.aws.s3.bucket = hipet-bucket
 cloud.aws.s3.credentials.access-key = AKIAU6GD2XTY2EO2CVPT
 cloud.aws.s3.credentials.secret-key = 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
