--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
 spring.application.name=hipet
 
-spring.datasource.url = jdbc:mysql://hipet-db.cjs2cy0m6zxd.ap-northeast-2.rds.amazonaws.com:3306/hipet
+spring.datasource.url = jdbc:mysql://hipet-db.cjs2cy0m6zxd.ap-northeast-2.rds.amazonaws.com:3306/hipet_hj
 spring.datasource.username=admin
 spring.datasource.password=hipet0517
 
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 cloud.aws.s3.bucket = hipet-bucket
 cloud.aws.s3.credentials.access-key = AKIAU6GD2XTY2EO2CVPT
 cloud.aws.s3.credentials.secret-key = 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
 cloud.aws.s3.region.static = ap-northeast-2
 cloud.aws.s3.region.auto = false
 cloud.aws.s3.stack.auto = false
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
 
 spring.servlet.multipart.maxFileSize: 100MB
 spring.servlet.multipart.maxRequestSize: 200MB
