--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hipet
 
-spring.datasource.url = jdbc:mysql://hipet-db.cjs2cy0m6zxd.ap-northeast-2.rds.amazonaws.com:3306/hipet_hj
+spring.datasource.url = jdbc:mysql://hipet-db.cjs2cy0m6zxd.ap-northeast-2.rds.amazonaws.com:3306/hipet
 spring.datasource.username=admin
 spring.datasource.password=hipet0517
 
