--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ cloud.aws.s3.stack.auto = false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 spring.servlet.multipart.maxFileSize: 100MB
 spring.servlet.multipart.maxRequestSize: 200MB
